# rag-devdocs

./: .env.example  .gitignore  CLAUDE.md  DEVDOCS_ENHANCEMENTS.md  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
api/: generate.py  main.py
common/: chroma.py  langfuse_client.py  logging.py
docs/corpus/: fastapi_first_steps.md
eval/: ci_golden.json  eval_results.json  example_golden.json  golden.json  run_eval.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
ingest/: chunker.py  embed.py  loader.py
prompts/: v1.yaml
retriever/: bm25_search.py  hybrid.py  reranker.py  vector_search.py
scripts/: download_corpus.sh  test_integration.py  test_retrieval.py
