[project]
name = "rag-devdocs"
version = "0.1.0"
description = "RAG system for developer documentation"
requires-python = ">=3.11"

[project.scripts]
ragdevdocs = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["common", "ingest", "retriever", "api"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
